apps/prod/zigbee2mqtt/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee2mqtt
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
