apps/prod/zigbee2mqtt/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: zigbee.iot.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:0eScuR+r8DohDIY0s7QPOeUE0bDZzClAG1/z920=,iv:vHQOR+5GQwLmOgVaLZ5/es8LoKTd0v5fTpoGp1fvzyY=,tag:m5ptQj5rr8RUWnIbxegf5A==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:5TlhSKaiXbYoKwvMrXSjg3szDLDFcw==,iv:bPAuEpfGvDVDar5L+rFt5Sb0ia+XoqoPVytw33/DQrQ=,tag:gTktbDFbau/h+wapfrvbew==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: zigbee2mqtt
    namespace: zigbee2mqtt
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:8M0KEg4mYs2Oz9U2i2TgoX2PcFBCY71fG1eVzWOZeBcl6QV/ug==,iv:w/eKbKAA9FsapvtzzUULf7h/Aq+I76f8DGw9P+rS6kM=,tag:xiOFqgKpobqv2NBXIkaOAg==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: zigbee2mqtt
              namespace: zigbee2mqtt
    tls:
        domains:
            - main: ENC[AES256_GCM,data:dokPfeStq7wnO5QFxa2zJMRAgG0fQA==,iv:Fg4NX0/zPBwl0zNwNmiD/791aUyW1ZEnXJRhcwU9fyQ=,tag:L4evoqusApQTpejc9NzV5w==,type:str]
              sans:
                - ENC[AES256_GCM,data:vDoyAhWEZebRYVupL3KuTSnGmEFB3bA=,iv:LS1ZpO5aqgIF56efNKZCuiBFo5o8ecAtGtR8pvlBDcg=,tag:+MnkYBJmrMKkk9eNC2VsGQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: zigbee2mqtt-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2024-09-13T14:30:59Z"
    mac: ENC[AES256_GCM,data:Df0CVXVRjET1jrINSrMIuZQmGnfNm2MhB6M+jdOtoex4kAQ4mZVGfa1Acwi9QqY9yTzsEAhHKeBX9Ds7Z9y1+tIyjfsgnfqtTm1vn+taBHotBDIjdEl2A5KgHjXvAkjODg3rVKg8p8I3CcbQV4coY3G/bMr1BnZ3002k7rxtucQ=,iv:ekkGvgMXClKNfKKvVjV8/Riq1C/RgEDyKZytfbx5Igw=,tag:dzgIZ3BNLF2l9zFKuZWLVQ==,type:str]
    pgp:
        - created_at: "2024-09-13T14:30:59Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//a2Zdm2a5acNctUPzinWr4CIRVO1E6Lcp6khd2JFQeOcG
[...]
            =on2Z
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(ca.crt|client.crt|client.key|externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
